fixed spacing top page

--- a/style.css
+++ b/style.css
@@ -4,13 +4,13 @@
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
   color: #2c3e50;
-  margin-top: 60px;
+  margin-top: 0.5rem;
 }
  /* Dropdown Button */
  .dropbtn {
   background-color: #d62828;
   color: white;
-  padding: 16px;
+  padding: 2rem;
   font-size: 16px;
   border-radius: 0.5rem;
 
